# institute-one

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  MORNING-REPORT.md  PATCH-NOTES-B3.md  PATCH-NOTES-B6.md  PATCH-NOTES-C1.md  PATCH-NOTES-C2.md  PATCH-NOTES-D5.md  PATCH-NOTES-E6.md  PATCH-NOTES-FACTCHECK-INTEGRITY.md  PATCH-NOTES-LOOP-P10.md  PATCH-NOTES-M8-008.md  PATCH-NOTES-M8-010.md  PATCH-NOTES-NORTHSTAR-R5-CLOSURE.md  PATCH-NOTES-SPA-A.md  PATCH-NOTES-SPA-B.md  README.md  README.zh-CN.md  REVIEW-A2.md  REVIEW-A5.md  REVIEW-B2.md  REVIEW-D5.md  REVIEW-R3-QUEUE.md  ROADMAP.md  pyproject.toml
app/: __init__.py  __main__.py  background.py  bus.py  cli.py  config.py  db.py  main.py  mcp.py  util.py
catalog/: analysts.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
migrations/: 0001_init.sql  0002_roadmap.sql  0002_shared_data.sql  0003_evidence.sql  0003_theses.sql  0003_thesis_registry.sql  0004_fact_cards.sql  0004_securities.sql  0004_security_master.sql  0005_analyst_daily_memory.sql  0005_research_hardening.sql  0005_roadmap_dep_source.sql  0006_market_data.sql  0007_vectors.sql  0008_cron_metrics.sql  0009_hand_weights.sql  0010_analyst_memory.sql  0011_whiteboard_similarity.sql  0012_research_thesis.sql  0013_forecasts.sql  0014_shared_data.sql  0015_fact_check.sql  0016_chain_graph.sql  0017_paper_book.sql  0018_operator_actions.sql  0019_paper_book_hardening.sql  0020_research_tree.sql  0021_projects.sql  0022_action_dispositions_unique.sql  0023_recipes_minimal_loop.sql  0024_task_lineage.sql  0025_dispute_outbox.sql  0026_operator_selfimprove.sql  0027_multi_agent_groups.sql  0028_task_overcommitted.sql  0029_prompt_overrides.sql  0030_chain_properties.sql  0031_favorites.sql  0032_portfolios.sql  0033_forecast_evidence.sql  (+11 more)
obsidian-plugin/: README.md  esbuild.config.mjs  main.js  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
roadmap/: 01-portal-design.md  02-data-model.md  03-board-seed.md  04-automation.md  05-global-coding-process.md  06-agent-protocol.md  07-market-thesis-data-kickoff.md  08-claude-handover.md  README.md  backlog.json  card-template.md  loop-fix-backlog.md  loop-fix-cursor-prompt.md  loop-fix-prompt.md  loop-fix-state.json
scripts/: _daemon_start.py  apply-roadmap-acceptance.py  backfill_claim_audit.py  backfill_evidence.py  com.institute-one.server.plist.template  export_judgement_bridge.py  install-hooks.sh  install-plugin.sh  install-service.sh  install.sh  runtime-config.py  start.sh  stop.sh  uninstall-service.sh
tests/: conftest.py  test_agy.py  test_analyst_daily.py  test_analysts.py  test_api_routes.py  test_archive.py  test_ask_memory.py  test_ask_priority.py  test_auth.py  (+61 more)
(+228 files in other folders)
