[project]
name = "institute-one"
version = "0.1.0"
description = "Single-node AI institute: hand router + research backend + operator UI + Obsidian vault"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
    "apscheduler>=3.10,<4",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "sqlite-vec>=0.1.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.14"]

[project.scripts]
institute = "app.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
# Long Chinese prompt strings are deliberate; no formatter is imposed on them.
line-length = 120

[tool.ruff.lint]
# Correctness-focused: pyflakes + pycodestyle errors + blind-except (the
# codebase already annotates intentional broad handlers with `noqa: BLE001`).
select = ["E4", "E7", "E9", "F", "BLE"]

[tool.ruff.lint.per-file-ignores]
# Short comprehension variables like `l` are established test idiom here.
"tests/*" = ["E741"]
